Attempts to fix image stretching with flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -1497,6 +1497,7 @@ footer.bottom {
   .splitter {
     position: relative;
     padding: 3em;
+    align-items: flex-start;
   }
 
   .image-copy-split-small {
